[package]
name = "hikka_cli"
version = "0.1.0-beta.27"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
dotenvy = "0.15.7"
futures = "0.3"
futures-executor = "0.3"
keyring = "2.3.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustyline = "14.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skim = "0.10.4"
thirtyfour = "0.32.0"
tokio = { version = "1", features = ["full"] }
# wana_kana = { git = "https://github.com/alardev/wana_kana_rust" }
