[package]
name = "hikka_cli"
version = "1.0.0-beta.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dotenvy = "0.15.7"
futures = "0.3"
futures-executor = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustyline = "14.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thirtyfour = "0.32.0"
tokio = { version = "1", features = ["full"] }
# wana_kana = { git = "https://github.com/alardev/wana_kana_rust" }
